enhance(ux): display property pairs vertically on mobile
addresses https://test.logseq.com/#/page/690cb89e-997f-425a-ae04-e7709b23c827

--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -616,3 +616,11 @@ html[data-silk-native-page-scroll-replaced=false] .app-silk-index-scroll-view {
     @apply border-none;
   }
 }
+
+.ls-properties-area .property-pair {
+  @apply flex flex-col items-start;
+
+  .property-key {
+    margin-bottom: -6px;
+  }
+}
