--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -177,7 +177,7 @@
 }
 
 .ui__button.empty-btn, .empty-text-btn {
-  @apply !h-6 !px-0 font-normal opacity-50;
+  @apply !h-6 !px-0 !text-base opacity-50 font-normal;
 }
 
 .ui__button.empty-btn:hover, .empty-text-btn:hover {
