--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -115,6 +115,10 @@
     margin-top: 8px;
     margin-bottom: 8px;
   }
+  .raw_html {
+    white-space: normal;
+    line-height: 1.2em;
+  }
 }
 
 .block-body ul,
